# Kizuna-Project

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
inc/database/: data.hpp  database.cpp  database.hpp  database_accessor.hpp  sqlite_database.hpp
inc/harmony/: data.hpp  harmony.hpp  kernels.hpp  model.hpp  opencl_kernels.hpp  results.hpp  supervised.hpp  unsupervised.hpp
inc/harmony/neuralnet/: abstract_layer.hpp  hidden_layers.hpp  input_layers.hpp  layers.hpp  neuralnet.hpp  output_layers.hpp
inc/kizuna/: configuration.hpp  core.hpp  data.hpp  error_emitter.hpp  errors.hpp  exceptions.hpp  kernel.hpp  kizuna.hpp  module.hpp  shell.hpp  status.hpp  submodule.hpp
inc/kizuna/errors/: error_emitter.hpp  error_handler.hpp  errors.hpp
inc/utility/: utils.hpp
inc/webserver/: responses.hpp  webserver.hpp  win_server.hpp
lib/: OpenCL.lib
src/: main.cpp
src/core/: CMakeLists.txt  main.cpp
src/core/cl/: core.cl  math.cl
src/core/inc/: core.hpp  data.hpp  matrix.hpp
src/core/src/: core.cpp  data.cpp
src/harmony/: CMakeLists.txt  data.cpp  harmony.cpp  kmeans.cpp  knn.cpp  opencl_kernels.cpp  supervised.cpp
src/harmony/cl/: math.cl
src/harmony/inc/: harmony.hpp  unsupervised.hpp
src/harmony/neuralnet/: neuralnet.cpp  perceptron_layer.cpp  relu_layer.cpp
src/harmony/src/: harmony.cpp  kmeans.cpp
src/kizuna/: CMakeLists.txt  configuration.cpp  data.cpp  error_emitter.cpp  error_handler.cpp  kizuna.cpp  module.cpp  submodule.cpp
src/kizuna/inc/: kizuna.hpp
src/kizuna/src/: data.cpp  kizuna.cpp
src/models/: CMakeLists.txt
src/models/inc/: unsupervised.hpp
src/models/src/: kmeans.cpp
src/sqlite/: CMakeLists.txt  data.cpp  database.cpp  database_accessor.cpp  sqlite_database.cpp
src/test/: CMakeLists.txt
src/test/inc/: matrix_test.hpp
src/test/src/: matrix_test.cpp
src/utility/: CMakeLists.txt  utils.cpp
src/utility/inc/: timer.hpp
src/webserver/: CMakeLists.txt  index.html  style.css  win_server.cpp
src/webserver/inc/: win_server.hpp
src/webserver/responses/: submodule.cpp
src/webserver/src/: win_server.cpp
